Adding temporary changes to Github

--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url =https://jnamg1998-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1i26d13tqe0h.us-south.codeengine.appdomain.cloud/
+backend_url =https://jnamg1998-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+sentiment_analyzer_url=https://sentianalyzer.1i51dgn5hoi3.us-south.codeengine.appdomain.cloud/
