--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url =https://jnamg1998-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1ic68ud2a11d.us-south.codeengine.appdomain.cloud/
+backend_url =https://jnamg1998-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+sentiment_analyzer_url=https://sentianalyzer.1im4f5bv5v3j.us-south.codeengine.appdomain.cloud/
